updated file creation script

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .vscode
 .env
 modeling/hp/
+images/
+data/
+MCdata/
+modeling/data/
+modeling/saved_models/
 
 
 # Byte-compiled / optimized / DLL files
