--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ numpy==1.24.2
 pandas==1.5.3
 panel==0.14.3
 yahoo-fin==0.8.9.1
+scikit-learn==1.2.2
+tensorflow==2.11.1
+pandas-ta==0.3.14b
+seaborn==0.12.2
+keras-tuner==1.3.4s
